# jiuwensymbiosis

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  Open_Source_Software_Notice.txt  README.md  README_CN.md  pyproject.toml  requirements.txt
.claude/rules/: code-style.md  karpathy-principles.md  security.md  testing.md
.claude/rules/python/: coding-style.md  security.md  testing.md
.claude/skills/python-patterns/: SKILL.md
.claude/skills/python-testing/: SKILL.md
.claude/skills/security-review/: SKILL.md
configs/piper/: observe_pose.json  pick_box.yaml  piper.yaml  piper_calib.json  watch_pick_box.yaml
configs/ubetech_cruzr_s2/: default.yaml
configs/unitree_go2/: default.yaml
docs/: architecture.md  development-guide.md  gui-guide.md  hand-eye-calibration.md  hardware-porting-guide.md  logging.md  ros2.md  trace-feedback-loop.md  trace.md
examples/: piper_pick_demo.py  piper_watch_pick_place.py  so101_pick_demo.py
examples/sample_trace/: piper-demo-77816242_20260626_113438_033124_1743847.html  piper-demo-77816242_20260626_113438_033124_1743847.json
jiuwensymbiosis/: __init__.py  cli.py
jiuwensymbiosis/adapters/: __init__.py
jiuwensymbiosis/adapters/_common/: __init__.py  builder.py  calibration.py  camera.py  capability_spec.py  detector_client.py  detector_sidecar.py  geometry.py  protocol.py  ros2_camera.py  ros2_odom.py  safety.py  skills.py  vision.py
jiuwensymbiosis/adapters/piper/: __init__.py  _calibration.py  api.py  config.py  env.py  geometry.py  lowlevel.py  session.py  slot_pick.py
jiuwensymbiosis/adapters/so101/: __init__.py  api.py  config.py  config_template.yaml  env.py  geometry.py  lowlevel.py  session.py
jiuwensymbiosis/adapters/so101/description/: NOTICE.md  (+1 more)
jiuwensymbiosis/adapters/ubetech_cruzr_s2/: __init__.py  api.py  config.py  config_template.yaml  env.py  lowlevel.py  session.py
jiuwensymbiosis/adapters/unitree_go2/: __init__.py  api.py  config.py  config_template.yaml  env.py  lowlevel.py  session.py
jiuwensymbiosis/agent/: __init__.py  abstractions.py  builder.py  config.py  mock_model.py  run.py  session.py  trace.py  trace_html.py
jiuwensymbiosis/agent/fast/: __init__.py  ability_exec.py  planner.py  registry.py  runner.py  sequence.py
jiuwensymbiosis/api/: __init__.py  base.py  decorators.py  mixins.py
jiuwensymbiosis/env/: __init__.py  base.py  mock.py  protocol.py
jiuwensymbiosis/gui/: README.md  __init__.py  __main__.py  app.py  app_state.py  bridge.py  config_model.py  diagnostics.py  humanize.py  imaging.py  layout.py  local_models.py  mock_sessions.py  perception_engine.py  preflight.py  registry.py  run_engine.py  run_status.py
jiuwensymbiosis/gui/assets/: README.md
jiuwensymbiosis/gui/data/: bodies.yaml  tasks.yaml
jiuwensymbiosis/gui/pages/: __init__.py  config_view.py  history_view.py  home_view.py  run_view.py  settings_view.py  tools_view.py
jiuwensymbiosis/perception/: __init__.py  camera.py  vision.py
jiuwensymbiosis/rails/: __init__.py  diagnosis.py  recovery.py  safety.py  visual_feedback.py
jiuwensymbiosis/serving/: __init__.py  grounding_dino_sam2_server.py
jiuwensymbiosis/skills/: __init__.py
jiuwensymbiosis/skills/slot_pick/: SKILL.md
jiuwensymbiosis/skills/visual_pick/: SKILL.md
jiuwensymbiosis/skills/visual_place/: SKILL.md
jiuwensymbiosis/tools/: __init__.py  builder.py  inproc_code.py  robot_control_tool.py
jiuwensymbiosis/tools/slot_pick/: __init__.py  detect.py  skill.py  strategy.py  vlm_judge.py
jiuwensymbiosis/trace_feedback/: __init__.py  analysis.py  patches.py  report.py
jiuwensymbiosis/utils/: __init__.py  geometry.py  logging.py  proxy.py
jiuwensymbiosis/voice/: __init__.py  asr.py  audio.py  config.py  loop.py  tts.py  wake.py
scripts/: __init__.py  analyze_traces.py  gui_launcher.py  install_desktop_entry.sh  launch_gui.sh  smoke_test_adapter.py  validate_adapter.py
scripts/calibrate/: calibrate.yaml  calibrate_hand_eye.py  handeye_board.py  handeye_core.py
scripts/new_adapter/: README.md  __init__.py  checks.py  main.py  render.py  spec.py
templates/xxx_adapter/: __init__.py  api.py  config.py  config_template.yaml  env.py  lowlevel.py  session.py
tests/: conftest.py  helpers.py
tests/integration/: test_hardware.py  test_mock_agent_e2e.py
tests/mocks/: __init__.py  mock_api.py  mock_detector.py  mock_driver.py  mock_env.py  mock_scene.py  mock_session.py  scene_api.py
tests/unit_tests/: test_cli_replay.py
tests/unit_tests/agent/: test_abstractions.py  test_builder.py  test_builder_parallel.py  test_builder_rails.py  test_config.py  test_mock_model.py  test_session.py  test_trace_html.py
tests/unit_tests/api/: test_base.py  test_decorators.py  test_mixins.py
tests/unit_tests/env/: test_base.py  test_mock.py  test_protocol.py
tests/unit_tests/fast/: test_compiler.py  test_run_fast_special_ops.py  test_run_fast_task.py  test_runner.py  test_sequence.py  test_tracking.py
tests/unit_tests/gui/: test_app.py  test_app_state.py  test_bridge.py  test_config_model.py  test_diagnostics.py  test_gui_entry.py  test_gui_launcher.py  test_humanize.py  test_imaging.py  test_local_models.py  test_mock_sessions.py  test_perception_engine.py  test_preflight.py  test_registry.py  test_run_engine.py  test_run_status.py
tests/unit_tests/perception/: __init__.py  test_calibration.py  test_detector_client.py  test_detector_sidecar.py  test_vision.py
tests/unit_tests/rails/: test_diagnosis.py  test_recovery.py  test_safety.py  test_trace.py  test_visual_feedback.py
tests/unit_tests/scripts/: test_analyze_traces.py  test_new_adapter.py
tests/unit_tests/serving/: test_server.py
tests/unit_tests/skills/: test_skills_dir.py  test_visual_pick_flow.py  test_visual_pick_ground_truth.py
tests/unit_tests/tools/: test_builder.py  test_inproc_code.py  test_robot_control.py
tests/unit_tests/trace_feedback/: conftest.py  test_analysis.py  test_patches.py  test_report.py
tests/unit_tests/utils/: test_geometry.py  test_logging.py  test_proxy.py
tests/unit_tests/voice/: test_audio.py  test_config.py  test_loop.py  test_tts.py  test_wake.py
(+40 files in other folders)
