# coding: utf-8
[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "jiuwensymbiosis"
version = "0.1.0"
description = "Robotics agent framework on top of openjiuwen"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<3.14"

dependencies = [
    "openjiuwen>=0.1.13",
    "numpy>=2",
    "pydantic>=2",
    "PyYAML>=6",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "respx>=0.22",
    "pillow>=12",
    "httpx>=0.28",
]
full = [
    # torch/torchvision 必须配合 --extra-index-url https://download.pytorch.org/whl/cu128 安装，
    # torchvision 0.23.0 与 torch 2.8.0 配对；SAM2(transformers Sam2ImageProcessor)依赖 torchvision。
    "torch==2.8.0+cu128",
    "torchvision==0.23.0+cu128",
    "pyrealsense2>=2.57",
    "opencv-python>=4",
    "transformers>=5",
    "fastapi>=0.136",
    "uvicorn>=0.46",
    "requests>=2.31",
    "pillow>=12",
    "httpx>=0.28",
]
piper = ["piper_sdk>=0.6.1"]

[project.scripts]
piper-pick-demo = "jiuwensymbiosis.cli:piper_pick_demo"
piper-watch-pick-place = "jiuwensymbiosis.cli:piper_watch_pick_place"
jiuwensymbiosis-replay = "jiuwensymbiosis.cli:replay_main"

[tool.setuptools.packages.find]
include = ["jiuwensymbiosis*"]

[tool.setuptools.package-data]
jiuwensymbiosis = ["skills/**/SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: no hardware or GPU required",
    "integration: requires real hardware, GPU, or external services",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:pymilvus",
    "ignore::DeprecationWarning:openjiuwen",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]

[tool.black]
line-length = 100
