# coding: utf-8
[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "jiuwensymbiosis"
version = "0.1.0"
description = "Robotics agent framework on top of openjiuwen"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<3.14"

dependencies = [
    "openjiuwen>=0.1.13",
    "numpy>=2",
    "pydantic>=2",
    "PyYAML>=6",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "respx>=0.22",
    "pillow>=12",
    "httpx>=0.28",
]
full = [
    # torch/torchvision 必须配合 --extra-index-url https://download.pytorch.org/whl/cu128 安装，
    # torchvision 0.23.0 与 torch 2.8.0 配对；SAM2(transformers Sam2ImageProcessor)依赖 torchvision。
    "torch==2.8.0+cu128",
    "torchvision==0.23.0+cu128",
    "pyrealsense2>=2.57",
    "opencv-python>=4",
    "transformers>=5",
    "fastapi>=0.136",
    "uvicorn>=0.46",
    "requests>=2.31",
    "pillow>=12",
    "httpx>=0.28",
]
piper = ["piper_sdk>=0.6.1"]
calib = [
    # 手眼标定脚本 scripts/calibrate_hand_eye.py 的依赖，刻意独立于重型 [full] GPU 栈，
    # 也不进 core（core 须保持无硬件/无视觉，mock 测试要离线跑）。
    # ChArUco 自 OpenCV 4.7/4.8 起在 cv2.aruco 主模块（无需 opencv-contrib）；棋盘格任意 4.x 可用。
    "opencv-python>=4.8",
    # RealSense 出厂内参 + 取帧；非 RealSense 相机可用棋盘格离线图 + --intrinsics 跳过本依赖。
    "pyrealsense2>=2.57",
]

[project.scripts]
piper-pick-demo = "jiuwensymbiosis.cli:piper_pick_demo"
piper-watch-pick-place = "jiuwensymbiosis.cli:piper_watch_pick_place"
jiuwensymbiosis-replay = "jiuwensymbiosis.cli:replay_main"

[tool.setuptools.packages.find]
include = ["jiuwensymbiosis*"]

[tool.setuptools.package-data]
jiuwensymbiosis = ["skills/**/SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: no hardware or GPU required",
    "integration: requires real hardware, GPU, or external services",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:pymilvus",
    "ignore::DeprecationWarning:openjiuwen",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]

[tool.black]
line-length = 100
